# Alta_Qualidade_Software

./: README.md
repo_petrobahia/: clientes.txt  dev-requirements.txt
repo_petrobahia/petrobahia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
repo_petrobahia/src/: main.py  pyproject.toml
repo_petrobahia/src/domains/: cliente.py  pedido.py
repo_petrobahia/src/legacy/: cliente.py  clientes.py
repo_petrobahia/src/services/: preco_calculadora.py  servico_cliente.py
repo_petrobahia/tests/: tests_cliente.py  tests_pedido_calculadora.py  tests_preco_estrategias.py  tests_servico_cliente.py
